tests/snapshot/error/stack_trace/non_error/async_generator_throw_module.js
async function* gen() {
    yield 1;
}
const g = gen();
await g.next();
await g.throw(42);
